--- a/src/components/Country.module.css
+++ b/src/components/Country.module.css
@@ -1,3 +1,34 @@
 .card {
   cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+
+.card__sectionHeader {
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.card__sectionFlag {
+  width: 100%;
+  aspect-ratio: 16/9;
+}
+
+.card__sectionInfo {
+  padding: 1rem 2rem 2.5rem;
+}
+
+.card__sectionName {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.card__sectionData {
+  font-size: 0.9rem;
+}
+
+.card__sectionData span {
+  font-weight: 600;
 }
